added header and styled the about section in the about page

--- a/css/index.css
+++ b/css/index.css
@@ -221,3 +221,11 @@ footer nav a {
     color: white;
     text-decoration: none;
 }
+
+/* about page CSS */
+
+.about-text {
+    margin-bottom: 5%;
+    padding-bottom: 5%;
+    border-bottom: 1px dashed black;
+}
