--- a/css/index.css
+++ b/css/index.css
@@ -229,3 +229,9 @@ footer nav a {
     padding-bottom: 5%;
     border-bottom: 1px dashed black;
 }
+
+.bottom-text {
+    margin: 5% 0;
+    padding-top: 5%;
+    border-top: 1px dashed black;
+}
